# signate-spectrum-challenge

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
configs/: _auto_abs_area_d1_lgbm.yaml  _auto_abs_emsc_d1_lgbm.yaml  _auto_abs_emsc_deep.yaml  _auto_area_d1_lgbm.yaml  _auto_area_d2_lgbm.yaml  _auto_boxcox_pls_lam0.0_nc28.yaml  _auto_boxcox_pls_lam0.25_nc28.yaml  _auto_boxcox_pls_lam0.5_nc28.yaml  _auto_cb_d3_emsc.yaml  _auto_cb_d3_l2_1_emsc.yaml  _auto_cb_d3_l2_1_snv.yaml  _auto_cb_d3_l2_50_emsc.yaml  _auto_cb_d3_l2_50_snv.yaml  _auto_cb_d3_lr05_emsc.yaml  _auto_cb_d3_lr05_snv.yaml  _auto_cb_d3_snv.yaml  _auto_cb_d4_emsc.yaml  _auto_cb_d4_emsc_s0.yaml  _auto_cb_d4_emsc_s1.yaml  _auto_cb_d4_emsc_s2.yaml  _auto_cb_d4_emsc_s3.yaml  _auto_cb_d4_emsc_s4.yaml  _auto_cb_d4_snv.yaml  _auto_cb_d4_ss07_emsc.yaml  _auto_cb_d4_ss07_snv.yaml  _auto_cb_d5_emsc.yaml  _auto_cb_d5_lr05_emsc.yaml  _auto_cb_d5_lr05_snv.yaml  _auto_cb_d5_snv.yaml  _auto_cb_d6_emsc.yaml  _auto_cb_d6_snv.yaml  _auto_cnn_large_emsc.yaml  _auto_cnn_large_emsc_nobin.yaml  _auto_cnn_medium_emsc.yaml  _auto_cnn_medium_emsc_nobin.yaml  _auto_cnn_small_emsc.yaml  _auto_cnn_small_emsc_nobin.yaml  _auto_cr_d0_lgbm.yaml  _auto_cr_d1_lgbm.yaml  _auto_cr_xgb.yaml  (+547 more)
docs/: experiment_log.md  insights.md
notebooks/: 00_eda.ipynb  01_baseline.ipynb
runs/: batch_phase2_results.json  batch_phase3_results.json  batch_phase4_results.json  batch_phase5_results.json  batch_phase6_results.json  batch_phase7_results.json  batch_results.json  phase33_results_20260307_171151.json  phase34_results_20260307_173759.json  (+4 more)
(+130 files in other folders)
